<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingHorizontal="19dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="83dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/it_s_coffee_time"
        android:textColor="@color/old_pink"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:layout_below="@+id/editTextUsername"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="44dp">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cooper"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/register"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_a_member"
            android:textColor="@color/medium_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/cooper" />
    </LinearLayout>
</RelativeLayout>