<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/welcome"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/coffee_car" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingHorizontal="35dp"
        android:text="@string/coffee_first_coding_later"
        android:textColor="@color/old_pink"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="44dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:backgroundTint="@color/cooper"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_brown"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/steel_blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/connect_with_facebook"
        android:textAllCaps="false" />

</LinearLayout>